update 1 file and delete 11 files > Moved to app.js ✨

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <link rel="stylesheet" href="./style.css">
         <meta name="title" content="Sven's Portfolio">
         <meta name="description" content="Hey! I'm Sven, a dutch student and developer!">
-        <script defer src="./scripts/app.js"></script>
-        <script defer src="./scripts/effect.js"></script>
-        <script defer src="./scripts/cursor.js"></script>
+        <script defer src="./app.js"></script>
         <script src="https://unpkg.com/kinet@2.2.1/dist/kinet.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/darkreader/darkreader.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
