--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
                 <div style="text-align: left; display: flex; flex-direction: column; width: 100%; justify-content: center; height: 100%;">
                     <h2 style="font-size: calc(2.5vw  + 2.5vh); margin-left: 32.5%; color: #74A3FF;">Projects</h2>
                     <p style="font-size: calc(1vw  + 1vh); margin-left: 35%; margin-top: -2.5%;">I work on the next projects;
-                        <br>- ORAE IBC. (<a href="https://twitter.com/ORAENet">Twitter</a>)
-                        <br><span special="./assets/howdy.png">- Howdy!</span>
-                        <br><span>- Centered</span>
-                        <br><span>- Konnect</span>
+                        <br>- Nothing to show...
                     </p>
                 </div>
             </section>
