update index.html > Wanted to.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div style="display: grid;">
             <section style="display: flex; justify-content: center; align-items: center;" id="start">
                 <div class="main1-text">
-                    <h1 style="text-align: center; font-size: calc(2vw + 2vh); margin-bottom: 0;">Sven V</h1>
+                    <h1 style="text-align: center; font-size: calc(2vw + 2vh); margin-bottom: 0;"><span style="color: rgba(0, 0, 0, 0.55);">Hey, im</span> Sven<span style="color: rgba(0, 0, 0, 0.55)">!</span></h1>
                     <h1 style="text-align: center; font-size: calc(1.5vw + 1.5vh); margin-top: 2vh; color: rgba(0, 0, 0, 0.75);" id="id-skill"></h1>
                     <div class="blocks">
                         <div style="position: absolute; transition-duration: 500ms; background: #FFD772; border-radius: 15px; transform: rotate(7deg); width: calc(7.5vh + 7.5vw); height: calc(7.5vh + 7.5vw); top: 0; left: 0; margin-top: 40vh; margin-left: 10vw;"></div>
@@ -71,6 +71,7 @@
                         <h2 style="font-size: calc(2.5vw  + 2.5vh); color: #74A3FF;">Projects</h2>
                         <p style="font-size: calc(1vw  + 1vh); margin-top: -2.5%;">I work on the next projects;<br>
                             <a href="https://app.bijsven.nl" style="text-decoration: none;">- Sven's App Register</a><br>
+                            <a href="https://snacker.orae.one" style="text-decoration: none;">- Snacker</a><br>
                             <a href="https://centered.orae.one" style="text-decoration: none;">- Centered</a><br>
                             <a href="https://github.com/BijSven/HowdyApp" style="text-decoration: none;">- Howdy Social</a>
                         </p>
